--- a/public/css1.css
+++ b/public/css1.css
@@ -140,3 +140,12 @@ body
     justify-content: space-around; 
     align-items: center; height: 100px;
 }
+
+.custom-link svg {
+    color: black;
+    fill: black;
+}
+
+a{
+    text-decoration: none;
+}
