--- a/public/style1.css
+++ b/public/style1.css
@@ -16,19 +16,19 @@ body
     margin: auto;
 }
 
-.image1
+.imgClass1
 {
     width:30%; 
     height: 5%; 
     margin: 2px;
 }
 
-.sall
+.divClass1
 { 
     margin-left: 100px;
 }
 
-.image2
+.imgClass2
 {
     width: 40px; 
     height: 40px; 
@@ -62,7 +62,7 @@ body
 
 .divClass2
 {
-    background-color: rgb(64, 79, 104); 
+    background-color: rgb(64, 79, 104);
     padding: 2px;
 }
 
