Fichier Mis-a-jour

--- a/css2.css
+++ b/css2.css
@@ -6,6 +6,7 @@ body
 
 .headerClass
 {
+    z-index: 2;
     position: fixed; 
     width: 100%; 
     top: 0;
@@ -37,7 +38,7 @@ body
 
 .navClass1
 {
-    z-index: relative;
+    z-index: 10px;
     padding-left: 35px; 
     margin-top: 70px; 
     padding-top: 2px; 
